Fix alert box overlap the logo in the login page (#122)

--- a/apps/admin_panel/assets/src/styles/components/_alert.scss
+++ b/apps/admin_panel/assets/src/styles/components/_alert.scss
@@ -2,10 +2,15 @@
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 2rem;
+  display: inline-block;
 }
 
 .alert-danger {
   border: 1px solid $red-alert;
+}
+
+.alert-center {
+  text-align: center;
 }
 
 .alert-success {
